chore(deps): update plugin io.micronaut.build.shared.settings to v5.3.7 (#7379)
* chore(deps): update plugin io.micronaut.build.shared.settings to v5.3.7

* Downgrade to 5.3.6

* Back to 5.3.7

* Try 5.3.5

* Try 5.3.3

* Up to 5.3.6

* Fix size() calls in Spock

* Fix optional response for mocked call

* Allow SystemLambda to work on Java 17

* Try 5.3.8

* Back to 5.3.6 for now

Co-authored-by: Renovate Bot <bot@renovateapp.com>
Co-authored-by: Tim Yates <tim.yates@gmail.com>